force-app/main/default/objects/genesis__Application_Pricing_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Fixed_Fee__c</fullName>
        <label>Fixed Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Validity__c</fullName>
        <label>Offer Validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_Method__c</fullName>
        <label>Repayment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amex Receivables</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>AXP</fullName>
                </value>
                <value>
                    <fullName>Debit ACH</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repayment_Term__c</fullName>
        <formula>TEXT( genesis__Term__c )  &amp; &apos; Months&apos;</formula>
        <label>Repayment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Repayment__c</fullName>
        <label>Total Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>genesis__Payment_Frequency__c</fullName>
        <inlineHelpText>Payment frequency.</inlineHelpText>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MONTHLY</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>QUARTERLY</fullName>
                </value>
                <value>
                    <fullName>ANNUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Residual_Type__c</fullName>
        <inlineHelpText>Type of residual associated with this pricing.</inlineHelpText>
        <label>Residual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TERM RESIDUAL</fullName>
                </value>
                <value>
                    <fullName>FAIR MARKET VALUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>